# SubSnap

./: .gitignore  Cargo.toml  PERFORMANCE_OPTIMIZATION.md  README.md  TECHNICAL_DETAILS.md  benchmark.sh  test_performance.sh
.cargo/: config.toml
docs/: batch_processing.md
src/: app.rs  benchmark.rs  cli.rs  converter.rs  frame_extraction.rs  main.rs  runner.rs  wgpu_processor.rs  yuv_to_rgb.wgsl
src/converters/: ffmpeg_converter.rs  manual_converter.rs  mod.rs  opencv_converter.rs  wgpu_converter.rs  yuvutils_converter.rs
src/decoders/: ffmpeg_decoder.rs  mod.rs  mp4_decoder.rs  opencv_decoder.rs
src/shaders/: yuv_to_rgb_batch.wgsl
testing/: PERFORMANCE_HEATMAP.md  benchmark_test.sh  demo_heatmap.sh  ffmpeg_monitor.csv  generate_heatmap.py  manual_monitor.csv  monitor_system.sh  setup_heatmap.sh
testing/results/: .gitignore
