[package]
name = "sub-snap"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.0"
yuvutils-rs = "0.8.3" # 高性能YUV转换库
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
image = "0.25"
num_cpus = "1.17.0"
rayon = "1.8"           # 并行计算库
crossbeam-channel = "0.5" # 高性能无锁通道
crossbeam-utils = "0.8"   # 跨线程工具
parking_lot = "0.12"      # 高性能锁
memmap2 = "0.9"          # 内存映射文件
simd-json = "0.13"       # SIMD优化JSON处理
bytemuck = "1.14"        # 安全的字节转换
aligned-vec = "0.5"      # 内存对齐向量

# 性能优化配置
[profile.release]
opt-level = 3          # 最高优化级别
lto = true            # 链接时优化
codegen-units = 1     # 单个代码生成单元以获得最佳优化
panic = "abort"       # 减少二进制大小
strip = true          # 移除调试符号

# 开发时的性能配置
[profile.dev]
opt-level = 1         # 开发时适度优化以提高编译速度

# 针对特定依赖的优化
[profile.release.package.yuvutils-rs]
opt-level = 3

[profile.release.package.image]
opt-level = 3

[profile.release.package.ffmpeg-next]
opt-level = 3
